--- a/Hebergeur/pom.xml
+++ b/Hebergeur/pom.xml
@@ -5,9 +5,9 @@
   <modelVersion>4.0.0</modelVersion>
 
   <groupId>com.example</groupId>
-  <artifactId>Appariement</artifactId>
+  <artifactId>Hebergeur</artifactId>
   <version>1.0-SNAPSHOT</version>
-  <name>Appariement</name>
+  <name>Hebergeur</name>
   <packaging>war</packaging>
 
   <properties>
@@ -33,12 +33,7 @@
       <artifactId>jakarta.servlet-api</artifactId>
       <version>5.0.0</version>
       <scope>provided</scope>
-    </dependency>
-    <dependency>
-      <groupId>jakarta.ws.rs</groupId>
-      <artifactId>jakarta.ws.rs-api</artifactId>
-      <version>3.0.0</version>
-    </dependency>
+    </dependency>                                                
     <dependency>
       <groupId>org.junit.jupiter</groupId>
       <artifactId>junit-jupiter-api</artifactId>
@@ -53,6 +48,11 @@
       </dependency>      </dependencies>
 
   <build>
+    <resources>
+      <resource>
+        <directory>src/main/java</directory>
+      </resource>
+    </resources>
         <plugins>
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
